After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 792192 - jpeg, png, tiff: Fix pixel density conversions
jpeg, png, tiff: Fix pixel density conversions
Status: RESOLVED FIXED
Product: tracker
Classification: Core
Component: Miners
git master
Other All
: Normal normal
: ---
Assigned To: tracker-general
tracker-general
Depends on:
Blocks:
 
 
Reported: 2018-01-04 09:23 UTC by Debarshi Ray
Modified: 2018-01-29 10:05 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
tracker-extract: Fix pixel density conversions (2.07 KB, patch)
2018-01-04 09:25 UTC, Debarshi Ray
committed Details | Review
tracker-extract: Rename constant (4.55 KB, patch)
2018-01-27 22:20 UTC, Debarshi Ray
committed Details | Review

Description Debarshi Ray 2018-01-04 09:23:31 UTC
The conversions from pixels per centimetre to pixels per inch, introduced in commit 5c04c7dedeb985, are wrong. They'd be correct if we were converting from centimetres to inches, whereas we want to convert between per unit lengths. eg., if there is one pixel per centimetre, then there would be 2.54 pixels per inch, not 1/2.54 pixels per inch.
Comment 1 Debarshi Ray 2018-01-04 09:25:07 UTC
Created attachment 366271 [details] [review]
tracker-extract: Fix pixel density conversions
Comment 2 Carlos Garnacho 2018-01-26 23:52:11 UTC
Comment on attachment 366271 [details] [review]
tracker-extract: Fix pixel density conversions

Looks good, but doesn't CM_TO_INCH sound like a bit of a misnomer now? I read that as "1cm in inches", and the previous value was right according to that. How about CM(S)_PER_INCH?
Comment 3 Debarshi Ray 2018-01-27 22:20:48 UTC
Created attachment 367539 [details] [review]
tracker-extract: Rename constant
Comment 4 Carlos Garnacho 2018-01-28 20:36:09 UTC
Comment on attachment 367539 [details] [review]
tracker-extract: Rename constant

Looks good!