tracker-extract: Fix pixel density conversions

The CM_TO_INCH factor is meant to convert pixels per centimetre to
pixels per inch, not centimetres to inches. If there is one pixel per
centimetre, then there would be 2.54 pixels per inch.

Fallout from 5c04c7dedeb985db539d781670ba6b31cfa2006a

https://bugzilla.gnome.org/show_bug.cgi?id=792192